# aoc2024

./: Cargo.toml  dummy_input2.txt  dummy_input3.txt
src/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day6_2.rs  day6_visu.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_19.rs  day_21.rs  day_7.rs  day_7_bis.rs  day_9.rs  main.rs  utils.rs
