[package]
name = "aoc2024"
version = "0.1.0"
edition = "2021"

[dependencies]
colored = "2.2.0"
crossterm = "0.28.1"
ratatui = "0.29.0"
regex = "1.11.1"
reqwest = "0.12.9"
serde_json = "1.0.133"
strum = { version = "0.26.3", features = ["derive", "strum_macros"] }
tokio = { version = "1.41.1", features = ["full"] }
